fixed mobile spacing

--- a/app/(pages)/_components/Navbar/Navbar.module.scss
+++ b/app/(pages)/_components/Navbar/Navbar.module.scss
@@ -297,10 +297,14 @@ $mobile-breakpoint: 425px;
         display: block; // Show the menu icon on smaller screens
         // position: fixed;
         position: absolute;
-        right: 2rem;
+        left: 1.5rem;
         top: 2rem;
         cursor: pointer;
         z-index: 9999;
+    }
+
+    .hamburger{
+        left: 0px;
     }
 
     .words {
